add a class User

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -216,3 +216,10 @@ section .color {
     font-weight: 600;
     text-decoration: none;
 }
+
+.form .radio{
+	font-size : 1em;
+	font-weight:bold;
+	margin-top:10px;
+	padding:15px;
+}
