--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -223,3 +223,9 @@ section .color {
 	margin-top:10px;
 	padding:15px;
 }
+
+.MessageAlter{
+	text-align:center;
+	color:red;
+	font-weight:bold;
+}
